--- a/project/jni/application/xserver/AndroidAppSettings.cfg
+++ b/project/jni/application/xserver/AndroidAppSettings.cfg
@@ -1,21 +1,16 @@
 # The application settings for Android libSDL port
 
-AppSettingVersion=19
-
-# libSDL version to use (1.2 or 1.3, specify 1.3 for SDL2)
-LibSdlVersion=1.2
-
 # Specify application name (e.x. My Application)
 AppName="XServer XSDL"
 
 # Specify reversed site name of application (e.x. com.mysite.myapp)
 AppFullName=x.org.server
 
-# Specify screen orientation: (v)ertical/(p)ortrait or (h)orizontal/(l)andscape
-ScreenOrientation=h
+# Application version code (integer)
+AppVersionCode=11108
 
-# Do not allow device to sleep when the application is in foreground, set this for video players or apps which use accelerometer
-InhibitSuspend=n
+# Application user-visible version name (string)
+AppVersionName="1.11.08"
 
 # Specify path to download application data in zip archive in the form 'Description|URL|MirrorURL^Description2|URL2|MirrorURL2^...'
 # If you'll start Description with '!' symbol it will be enabled by default, other downloads should be selected by user from startup config menu
@@ -24,6 +19,25 @@ InhibitSuspend=n
 # these files are put inside .apk package by build system
 # Also please avoid 'https://' URLs, many Android devices do not have trust certificates and will fail to connect to SF.net over HTTPS
 AppDataDownloadUrl="!!Data files|:data.tar.gz:data-1.tgz^!!Data files|:busybox:busybox^!!Data files|:DroidSansMono.ttf:DroidSansMono.ttf"
+
+# Reset SDL config when updating application to the new version (y) / (n)
+ResetSdlConfigForThisVersion=y
+
+# Delete application data files when upgrading (specify file/dir paths separated by spaces)
+DeleteFilesOnUpgrade="%"
+
+# Here you may type readme text, which will be shown during startup. Format is:
+# Text in English, use \\\\n to separate lines (that's four backslashes)^de:Text in Deutsch^ru:Text in Russian^button:Button that will open some URL:http://url-to-open/
+ReadmeText=''
+
+# libSDL version to use (1.2/1.3/2.0)
+LibSdlVersion=1.2
+
+# Specify screen orientation: (v)ertical/(p)ortrait or (h)orizontal/(l)andscape
+ScreenOrientation=h
+
+# Do not allow device to sleep when the application is in foreground, set this for video players or apps which use accelerometer
+InhibitSuspend=n
 
 # Video color depth - 16 BPP is the fastest and supported for all modes, 24 bpp is supported only
 # with SwVideoMode=y, SDL_OPENGL mode supports everything. (16)/(24)/(32)
@@ -75,6 +89,8 @@ CompatibilityHacksSlowCompatibleEventQueue=n
 # Save and restore OpenGL state when drawing on-screen keyboard for apps that use SDL_OPENGL
 CompatibilityHacksTouchscreenKeyboardSaveRestoreOpenGLState=
 
+# Application uses SDL_UpdateRects() properly, and does not draw in any region outside those rects.
+# This improves drawing speed, but I know only one application that does that, and it's written by me (y)/(n)
 CompatibilityHacksProperUsageOfSDL_UpdateRects=y
 
 # Application uses mouse (y) or (n), this will show mouse emulation dialog to the user
@@ -86,10 +102,11 @@ AppNeedsTwoButtonMouse=y
 # Show SDL mouse cursor, for applications that do not draw cursor at all (y) or (n)
 ShowMouseCursor=n
 
+# Generate more touch events, by default SDL generates one event per one video frame, this is useful for drawing apps (y) or (n)
 GenerateSubframeTouchEvents=y
 
 # Force relative (laptop) mouse movement mode, useful when both on-screen keyboard and mouse are needed (y) or (n)
-ForceRelativeMouseMode=n
+ForceRelativeMouseMode=y
 
 # Application needs arrow keys (y) or (n), will show on-screen dpad/joystick (y) or (n)
 AppNeedsArrowKeys=n
@@ -116,6 +133,12 @@ AppUsesMultitouch=y
 # API is defined in file SDL_android.h: int SDL_ANDROID_OpenAudioRecording(SDL_AudioSpec *spec); void SDL_ANDROID_CloseAudioRecording(void);
 # This option will add additional permission to Android manifest (y)/(n)
 AppRecordsAudio=n
+
+# Application needs to access SD card. If your data files are bigger than 5 Mb, enable it. (y) / (n)
+AccessSdCard=
+
+# Immersive mode - Android will hide on-screen Home/Back keys. Looks bad if you invoke Android keyboard. (y) / (n)
+ImmersiveMode=
 
 # Application implements Android-specific routines to put to background, and will not draw anything to screen
 # between SDL_ACTIVEEVENT lost / gained notifications - you should check for them
@@ -158,7 +181,7 @@ StartupMenuButtonTimeout=3000
 
 # Menu items to hide from startup menu, available menu items:
 #  SettingsMenu.OkButton SettingsMenu.DummyMenu SettingsMenu.MainMenu  SettingsMenuMisc.DownloadConfig SettingsMenuMisc.OptionalDownloadConfig SettingsMenuMisc.AudioConfig SettingsMenuMisc.VideoSettingsConfig SettingsMenuMisc.ShowReadme SettingsMenuMisc.GyroscopeCalibration SettingsMenuMisc.ResetToDefaultsConfig  SettingsMenuMouse.MouseConfigMainMenu SettingsMenuMouse.DisplaySizeConfig SettingsMenuMouse.LeftClickConfig SettingsMenuMouse.RightClickConfig SettingsMenuMouse.AdditionalMouseConfig SettingsMenuMouse.JoystickMouseConfig SettingsMenuMouse.TouchPressureMeasurementTool SettingsMenuMouse.CalibrateTouchscreenMenu  SettingsMenuKeyboard.KeyboardConfigMainMenu SettingsMenuKeyboard.ScreenKeyboardSizeConfig SettingsMenuKeyboard.ScreenKeyboardDrawSizeConfig SettingsMenuKeyboard.ScreenKeyboardThemeConfig SettingsMenuKeyboard.ScreenKeyboardTransparencyConfig SettingsMenuKeyboard.RemapHwKeysConfig SettingsMenuKeyboard.RemapScreenKbConfig SettingsMenuKeyboard.ScreenGesturesConfig SettingsMenuKeyboard.CustomizeScreenKbLayout 
-HiddenMenuOptions='' #SettingsMenuMisc.OptionalDownloadConfig SettingsMenuMouse.DisplaySizeConfig
+HiddenMenuOptions=''
 
 # Menu items to show at startup - this is Java code snippet, leave empty for default
 # new SettingsMenuMisc.ShowReadme(), (AppUsesMouse \&\& \! ForceRelativeMouseMode \? new SettingsMenuMouse.DisplaySizeConfig(true) : new SettingsMenu.DummyMenu()), new SettingsMenuMisc.OptionalDownloadConfig(true), new SettingsMenuMisc.GyroscopeCalibration()
@@ -172,18 +195,6 @@ MultiABI=armeabi-v7a
 
 # Minimum amount of RAM application requires, in Mb, SDL will print warning to user if it's lower
 AppMinimumRAM=0
-
-# Application version code (integer)
-AppVersionCode=11106
-
-# Application user-visible version name (string)
-AppVersionName="1.11.06"
-
-# Reset SDL config when updating application to the new version (y) / (n)
-ResetSdlConfigForThisVersion=y
-
-# Delete application data files when upgrading (specify file/dir paths separated by spaces)
-DeleteFilesOnUpgrade="%"
 
 # Optional shared libraries to compile - removing some of them will save space
 # MP3 support by libMAD is encumbered by patents and libMAD is GPL-ed
@@ -210,10 +221,6 @@ AppBuildExclude=''
 
 # Application command line parameters, including app name as 0-th param
 AppCmdline='XSDL'
-
-# Here you may type readme text, which will be shown during startup. Format is:
-# Text in English, use \\\\n to separate lines^de:Text in Deutsch^ru:Text in Russian, and so on (that's four backslashes, nice isn't it?)
-ReadmeText=''
 
 # Screen size is used by Google Play to prevent an app to be installed on devices with smaller screens
 # Minimum screen size that application supports: (s)mall / (m)edium / (l)arge
