Fixed SDL_HideScreenKeyboard() not restoring immersive mode and not hiding the SDL_ANDROID_ToggleScreenKeyboardWithoutTextInput() keyboard.

--- a/project/jni/application/xserver/AndroidAppSettings.cfg
+++ b/project/jni/application/xserver/AndroidAppSettings.cfg
@@ -7,10 +7,10 @@ AppName="XServer XSDL"
 AppFullName=x.org.server
 
 # Application version code (integer)
-AppVersionCode=11108
+AppVersionCode=11109
 
 # Application user-visible version name (string)
-AppVersionName="1.11.08"
+AppVersionName="1.11.09"
 
 # Specify path to download application data in zip archive in the form 'Description|URL|MirrorURL^Description2|URL2|MirrorURL2^...'
 # If you'll start Description with '!' symbol it will be enabled by default, other downloads should be selected by user from startup config menu
@@ -138,7 +138,7 @@ AppRecordsAudio=n
 AccessSdCard=
 
 # Immersive mode - Android will hide on-screen Home/Back keys. Looks bad if you invoke Android keyboard. (y) / (n)
-ImmersiveMode=
+ImmersiveMode=y
 
 # Application implements Android-specific routines to put to background, and will not draw anything to screen
 # between SDL_ACTIVEEVENT lost / gained notifications - you should check for them
