Enabled horizontal mouse wheel in SDL, updated XServer to support X86 and MIPS

--- a/project/jni/application/xserver-gimp/AndroidAppSettings.cfg
+++ b/project/jni/application/xserver-gimp/AndroidAppSettings.cfg
@@ -127,7 +127,7 @@ AppUsesAccelerometer=n
 AppUsesGyroscope=n
 
 # Application uses multitouch (y) or (n), multitouch events are passed as SDL_JOYBALLMOTION events for the joystick 0
-AppUsesMultitouch=y
+AppUsesMultitouch=n
 
 # Application records audio (it will use any available source, such a s microphone)
 # API is defined in file SDL_android.h: int SDL_ANDROID_OpenAudioRecording(SDL_AudioSpec *spec); void SDL_ANDROID_CloseAudioRecording(void);
