--- a/project/jni/application/xserver/AndroidAppSettings.cfg
+++ b/project/jni/application/xserver/AndroidAppSettings.cfg
@@ -7,10 +7,10 @@ AppName="XServer XSDL"
 AppFullName=x.org.server
 
 # Application version code (integer)
-AppVersionCode=11110
+AppVersionCode=11111
 
 # Application user-visible version name (string)
-AppVersionName="1.11.10"
+AppVersionName="1.11.11"
 
 # Specify path to download application data in zip archive in the form 'Description|URL|MirrorURL^Description2|URL2|MirrorURL2^...'
 # If you'll start Description with '!' symbol it will be enabled by default, other downloads should be selected by user from startup config menu
@@ -127,7 +127,7 @@ AppUsesAccelerometer=n
 AppUsesGyroscope=n
 
 # Application uses multitouch (y) or (n), multitouch events are passed as SDL_JOYBALLMOTION events for the joystick 0
-AppUsesMultitouch=n
+AppUsesMultitouch=y
 
 # Application records audio (it will use any available source, such a s microphone)
 # API is defined in file SDL_android.h: int SDL_ANDROID_OpenAudioRecording(SDL_AudioSpec *spec); void SDL_ANDROID_CloseAudioRecording(void);
