--- a/project/jni/application/openarena/AndroidAppSettings.cfg
+++ b/project/jni/application/openarena/AndroidAppSettings.cfg
@@ -24,7 +24,7 @@ AppDataDownloadUrl="!Game data|:baseoa/pak0.pk3:pak0.pk3|:baseoa/pak0.pk3:http:/
 ResetSdlConfigForThisVersion=n
 
 # Delete application data files when upgrading (specify file/dir paths separated by spaces)
-DeleteFilesOnUpgrade="libsdl-DownloadFinished-10.flag"
+DeleteFilesOnUpgrade="libsdl-DownloadFinished-10.flag baseoa/z_oacmp-volume1-v3.pk3"
 
 # Here you may type readme text, which will be shown during startup. Format is:
 # Text in English, use \\\\n to separate lines (that's four backslashes)^de:Text in Deutsch^ru:Text in Russian^button:Button that will open some URL:http://url-to-open/
