--- a/project/jni/application/openarena/AndroidAppSettings.cfg
+++ b/project/jni/application/openarena/AndroidAppSettings.cfg
@@ -7,10 +7,10 @@ AppName="OpenArena"
 AppFullName=ws.openarena.sdl
 
 # Application version code (integer)
-AppVersionCode=08825
+AppVersionCode=08826
 
 # Application user-visible version name (string)
-AppVersionName="0.8.8.25"
+AppVersionName="0.8.8.26"
 
 # Specify path to download application data in zip archive in the form 'Description|URL|MirrorURL^Description2|URL2|MirrorURL2^...'
 # If you'll start Description with '!' symbol it will be enabled by default, other downloads should be selected by user from startup config menu
@@ -24,7 +24,7 @@ AppDataDownloadUrl="!Game data|:baseoa/pak0.pk3:pak0.pk3|:baseoa/pak0.pk3:http:/
 ResetSdlConfigForThisVersion=n
 
 # Delete application data files when upgrading (specify file/dir paths separated by spaces)
-DeleteFilesOnUpgrade="libsdl-DownloadFinished-10.flag baseoa/z_oacmp-volume1-v3.pk3"
+DeleteFilesOnUpgrade="libsdl-DownloadFinished-10.flag" # baseoa/z_oacmp-volume1-v3.pk3
 
 # Here you may type readme text, which will be shown during startup. Format is:
 # Text in English, use \\\\n to separate lines (that's four backslashes)^de:Text in Deutsch^ru:Text in Russian^button:Button that will open some URL:http://url-to-open/
