XRick: Forgot to update version in

--- a/project/jni/application/xrick/AndroidAppSettings.cfg
+++ b/project/jni/application/xrick/AndroidAppSettings.cfg
@@ -7,7 +7,7 @@ AppName="XRick"
 AppFullName=net.xrick.sdl
 
 # Application version code (integer)
-AppVersionCode=100001
+AppVersionCode=1021212
 
 # Application user-visible version name (string)
 AppVersionName="021212"
