Option to disable INTERNET permission in AndroidAppSettings.cfg

--- a/project/jni/application/xrick/AndroidAppSettings.cfg
+++ b/project/jni/application/xrick/AndroidAppSettings.cfg
@@ -135,7 +135,10 @@ AppUsesMultitouch=n
 AppRecordsAudio=n
 
 # Application needs to access SD card. If your data files are bigger than 5 Mb, enable it. (y) / (n)
-AccessSdCard=
+AccessSdCard=n
+
+# Application needs Internet access. If you disable it, you'll have to bundle all your data files inside .apk (y) / (n)
+AccessInternet=n
 
 # Immersive mode - Android will hide on-screen Home/Back keys. Looks bad if you invoke Android keyboard. (y) / (n)
 ImmersiveMode=
