--- a/project/jni/application/uqm-hd/AndroidAppSettings.cfg
+++ b/project/jni/application/uqm-hd/AndroidAppSettings.cfg
@@ -7,10 +7,10 @@ AppName="Ur-Quan Masters HD"
 AppFullName=com.googlecode.uqm.hd
 
 # Application version code (integer)
-AppVersionCode=07006
+AppVersionCode=07009
 
 # Application user-visible version name (string)
-AppVersionName="0.7.0.06"
+AppVersionName="0.7.0.09"
 
 # Specify path to download application data in zip archive in the form 'Description|URL|MirrorURL^Description2|URL2|MirrorURL2^...'
 # If you'll start Description with '!' symbol it will be enabled by default, other downloads should be selected by user from startup config menu
@@ -24,7 +24,7 @@ AppDataDownloadUrl="!!640x480 graphics (160 Mb)|:packages/hires2x.uqm:http://sou
 ResetSdlConfigForThisVersion=n
 
 # Delete application data files when upgrading (specify file/dir paths separated by spaces)
-DeleteFilesOnUpgrade="%"
+DeleteFilesOnUpgrade="libsdl-DownloadFinished-11.flag"
 
 # Here you may type readme text, which will be shown during startup. Format is:
 # Text in English, use \\\\n to separate lines (that's four backslashes)^de:Text in Deutsch^ru:Text in Russian^button:Button that will open some URL:http://url-to-open/
