Xserver - start dummy service, so OS won't kill us

--- a/project/jni/application/xserver/AndroidAppSettings.cfg
+++ b/project/jni/application/xserver/AndroidAppSettings.cfg
@@ -39,6 +39,9 @@ ScreenOrientation=h
 # Do not allow device to sleep when the application is in foreground, set this for video players or apps which use accelerometer
 InhibitSuspend=n
 
+# Create Android service, so the app is less likely to be killed while in background
+CreateService=y
+
 # Video color depth - 16 BPP is the fastest and supported for all modes, 24 bpp is supported only
 # with SwVideoMode=y, SDL_OPENGL mode supports everything. (16)/(24)/(32)
 VideoDepthBpp=16
@@ -136,6 +139,9 @@ AppRecordsAudio=n
 
 # Application needs to access SD card. If your data files are bigger than 5 Mb, enable it. (y) / (n)
 AccessSdCard=
+
+# Application needs Internet access. If you disable it, you'll have to bundle all your data files inside .apk (y) / (n)
+AccessInternet=y
 
 # Immersive mode - Android will hide on-screen Home/Back keys. Looks bad if you invoke Android keyboard. (y) / (n)
 ImmersiveMode=y
