Updated TODO, updated Gimp

--- a/project/jni/application/xserver-gimp/AndroidAppSettings.cfg
+++ b/project/jni/application/xserver-gimp/AndroidAppSettings.cfg
@@ -7,10 +7,10 @@ AppName="GIMP Inkscape"
 AppFullName=org.gimp.inkscape
 
 # Application version code (integer)
-AppVersionCode=28210
+AppVersionCode=28211
 
 # Application user-visible version name (string)
-AppVersionName="2.8.2.10"
+AppVersionName="2.8.2.11"
 
 # Specify path to download application data in zip archive in the form 'Description|URL|MirrorURL^Description2|URL2|MirrorURL2^...'
 # If you'll start Description with '!' symbol it will be enabled by default, other downloads should be selected by user from startup config menu
@@ -18,7 +18,7 @@ AppVersionName="2.8.2.10"
 # If the URL does not contain 'http://' it is treated as file from 'project/jni/application/src/AndroidData' dir -
 # these files are put inside .apk package by build system
 # Also please avoid 'https://' URLs, many Android devices do not have trust certificates and will fail to connect to SF.net over HTTPS
-AppDataDownloadUrl="!!Data files|:data.tar.gz:http://sourceforge.net/projects/libsdl-android/files/ubuntu/dist-gimp-wheezy.tar.gz/download^!!Data files|:busybox:busybox^!!Data files|:DroidSansMono.ttf:DroidSansMono.ttf"
+AppDataDownloadUrl="!!Data files|:data.tar.gz:http://sourceforge.net/projects/libsdl-android/files/ubuntu/dist-gimp-wheezy.tar.gz/download^!!Data files|:DroidSansMono.ttf:DroidSansMono.ttf"
 
 # Reset SDL config when updating application to the new version (y) / (n)
 ResetSdlConfigForThisVersion=y
@@ -38,6 +38,9 @@ ScreenOrientation=h
 
 # Do not allow device to sleep when the application is in foreground, set this for video players or apps which use accelerometer
 InhibitSuspend=n
+
+# Create Android service, so the app is less likely to be killed while in background
+CreateService=n
 
 # Video color depth - 16 BPP is the fastest and supported for all modes, 24 bpp is supported only
 # with SwVideoMode=y, SDL_OPENGL mode supports everything. (16)/(24)/(32)
@@ -137,6 +140,9 @@ AppRecordsAudio=n
 # Application needs to access SD card. If your data files are bigger than 5 Mb, enable it. (y) / (n)
 AccessSdCard=
 
+# Application needs Internet access. If you disable it, you'll have to bundle all your data files inside .apk (y) / (n)
+AccessInternet=
+
 # Immersive mode - Android will hide on-screen Home/Back keys. Looks bad if you invoke Android keyboard. (y) / (n)
 ImmersiveMode=y
 
@@ -191,7 +197,7 @@ FirstStartMenuOptions='SettingsMenu.DummyMenu'
 
 # Enable multi-ABI binary, with hardware FPU support - it will also work on old devices,
 # but .apk size is 2x bigger (y) / (n) / (x86) / (all)
-MultiABI=armeabi-v7a
+MultiABI='armeabi-v7a'
 
 # Minimum amount of RAM application requires, in Mb, SDL will print warning to user if it's lower
 AppMinimumRAM=0
