--- a/project/jni/application/xserver/AndroidAppSettings.cfg
+++ b/project/jni/application/xserver/AndroidAppSettings.cfg
@@ -36,12 +36,6 @@ LibSdlVersion=1.2
 # Specify screen orientation: (v)ertical/(p)ortrait or (h)orizontal/(l)andscape
 ScreenOrientation=h
 
-# Do not allow device to sleep when the application is in foreground, set this for video players or apps which use accelerometer
-InhibitSuspend=n
-
-# Create Android service, so the app is less likely to be killed while in background
-CreateService=y
-
 # Video color depth - 16 BPP is the fastest and supported for all modes, 24 bpp is supported only
 # with SwVideoMode=y, SDL_OPENGL mode supports everything. (16)/(24)/(32)
 VideoDepthBpp=16
@@ -65,6 +59,12 @@ SdlVideoResize=y
 
 # Application resizing will keep 4:3 aspect ratio, with black bars at sides (y)/(n)
 SdlVideoResizeKeepAspect=n
+
+# Do not allow device to sleep when the application is in foreground, set this for video players or apps which use accelerometer
+InhibitSuspend=n
+
+# Create Android service, so the app is less likely to be killed while in background
+CreateService=y
 
 # Application does not call SDL_Flip() or SDL_UpdateRects() appropriately, or draws from non-main thread -
 # enabling the compatibility mode will force screen update every 100 milliseconds, which is laggy and inefficient (y) or (n)
@@ -101,6 +101,10 @@ AppUsesMouse=y
 
 # Application needs two-button mouse, will also enable advanced point-and-click features (y) or (n)
 AppNeedsTwoButtonMouse=y
+
+# Right mouse button can do long-press/drag&drop action, necessary for some games (y) or (n)
+# If you disable it, swiping with two fingers will send mouse wheel events
+RightMouseButtonLongPress=n
 
 # Show SDL mouse cursor, for applications that do not draw cursor at all (y) or (n)
 ShowMouseCursor=n
