Separate submodule for xserver-gimp

--- a/.gitmodules
+++ b/.gitmodules
@@ -43,3 +43,6 @@
 [submodule "project/jni/application/hid-pc-keyboard/src"]
 	path = project/jni/application/hid-pc-keyboard/src
 	url = git@github.com:pelya/android-keyboard-gadget.git
+[submodule "project/jni/application/xserver-gimp/xserver"]
+	path = project/jni/application/xserver-gimp/xserver
+	url = git@github.com:pelya/xserver.git
