--- a/project/jni/application/teeworlds/AndroidAppSettings.cfg
+++ b/project/jni/application/teeworlds/AndroidAppSettings.cfg
@@ -151,7 +151,7 @@ AccessSdCard=
 AccessInternet=
 
 # Immersive mode - Android will hide on-screen Home/Back keys. Looks bad if you invoke Android keyboard. (y) / (n)
-ImmersiveMode=
+ImmersiveMode=y
 
 # Application implements Android-specific routines to put to background, and will not draw anything to screen
 # between SDL_ACTIVEEVENT lost / gained notifications - you should check for them
