Enabled widescreen mode and 24bpp color depth in OpenTTD

--- a/project/jni/application/openttd/AndroidData/openttd-1.4.0.27.cfg
+++ b/project/jni/application/openttd/AndroidData/openttd-1.4.0.27.cfg
@@ -1,6 +1,6 @@
 
 [misc]
-resolution = 640,480
+resolution = 854,480
 small_font = 
 medium_font = 
 large_font = 
@@ -21,5 +21,5 @@ opengfx+biggui.grf =
 
 [gui]
 left_mouse_btn_scrolling = true
-osk_activation = immediately
+osk_activation = double
 
