OpenTTD: updated default settings, applied and removed patch files

--- a/project/jni/application/openttd/AndroidData/openttd-1.4.0.27.cfg
+++ b/project/jni/application/openttd/AndroidData/openttd-1.4.0.27.cfg
@@ -1,10 +1,9 @@
-
 [misc]
 resolution = 854,480
-small_font = 
-medium_font = 
-large_font = 
-mono_font = 
+small_font = fonts/Roboto-Bold.ttf
+medium_font = fonts/Roboto-Bold.ttf
+large_font = fonts/DroidSerif-Bold.ttf
+mono_font = fonts/DroidSansMono.ttf
 small_size = 10
 medium_size = 12
 large_size = 16
@@ -13,13 +12,9 @@ small_aa = true
 medium_aa = true
 large_aa = true
 mono_aa = true
-last_newgrf_count = 1
-language = english.lng
-
-[newgrf]
-opengfx+biggui.grf = 
+min_button_size = 30
+min_step_size = 30
 
 [gui]
 left_mouse_btn_scrolling = true
 osk_activation = double
-
