--- a/project/jni/application/openttd/AndroidData/openttd-1.4.0.27.cfg
+++ b/project/jni/application/openttd/AndroidData/openttd-1.4.0.27.cfg
@@ -12,9 +12,10 @@ small_aa = true
 medium_aa = true
 large_aa = true
 mono_aa = true
-min_button_size = 30
-min_step_size = 30
+min_button_size = 40
+min_step_size = 40
 
 [gui]
 left_mouse_btn_scrolling = true
-osk_activation = double
+osk_activation = disabled
+touchscreen_mode = 1
