Xserver: herp-derp crash fix for Xperia X10 devices, just by adding more logs

--- a/project/jni/application/xserver/AndroidAppSettings.cfg
+++ b/project/jni/application/xserver/AndroidAppSettings.cfg
@@ -7,10 +7,10 @@ AppName="XServer XSDL"
 AppFullName=x.org.server
 
 # Application version code (integer)
-AppVersionCode=11112
+AppVersionCode=11114
 
 # Application user-visible version name (string)
-AppVersionName="1.11.12"
+AppVersionName="1.11.14"
 
 # Specify path to download application data in zip archive in the form 'Description|URL|MirrorURL^Description2|URL2|MirrorURL2^...'
 # If you'll start Description with '!' symbol it will be enabled by default, other downloads should be selected by user from startup config menu
@@ -224,7 +224,7 @@ AppLdflags=''
 AppOverlapsSystemHeaders=
 
 # Build only following subdirs (empty will build all dirs, ignored with custom script)
-AppSubdirsBuild=''
+AppSubdirsBuild='none'
 
 # Exclude these files from build
 AppBuildExclude=''
