Updated Xserver-debian and OpenGL test app

--- a/project/jni/application/xserver-debian/AndroidAppSettings.cfg
+++ b/project/jni/application/xserver-debian/AndroidAppSettings.cfg
@@ -7,10 +7,10 @@ AppName="Debian"
 AppFullName=com.cuntubuntu
 
 # Application version code (integer)
-AppVersionCode=140331
+AppVersionCode=140401
 
 # Application user-visible version name (string)
-AppVersionName="14-03-31"
+AppVersionName="14-04-01"
 
 # Specify path to download application data in zip archive in the form 'Description|URL|MirrorURL^Description2|URL2|MirrorURL2^...'
 # If you'll start Description with '!' symbol it will be enabled by default, other downloads should be selected by user from startup config menu
@@ -37,7 +37,7 @@ LibSdlVersion=1.2
 ScreenOrientation=h
 
 # Do not allow device to sleep when the application is in foreground, set this for video players or apps which use accelerometer
-InhibitSuspend=n
+InhibitSuspend=y
 
 # Create Android service, so the app is less likely to be killed while in background
 CreateService=n
