Xserver-debian: fixes to startup command line

--- a/project/jni/application/xserver-debian/AndroidAppSettings.cfg
+++ b/project/jni/application/xserver-debian/AndroidAppSettings.cfg
@@ -7,10 +7,10 @@ AppName="Debian"
 AppFullName=com.cuntubuntu
 
 # Application version code (integer)
-AppVersionCode=140401
+AppVersionCode=140402
 
 # Application user-visible version name (string)
-AppVersionName="14.04.01"
+AppVersionName="14.04.02"
 
 # Specify path to download application data in zip archive in the form 'Description|URL|MirrorURL^Description2|URL2|MirrorURL2^...'
 # If you'll start Description with '!' symbol it will be enabled by default, other downloads should be selected by user from startup config menu
@@ -223,7 +223,7 @@ AppSubdirsBuild=''
 AppBuildExclude=''
 
 # Application command line parameters, including app name as 0-th param
-AppCmdline='XSDL -nohelp -exec $SECURE_STORAGE_DIR/img/proot.sh	-c	./startx.sh'
+AppCmdline='XSDL -nohelp -exec $SECURE_STORAGE_DIR/img/proot.sh	./startx.sh'
 
 # Screen size is used by Google Play to prevent an app to be installed on devices with smaller screens
 # Minimum screen size that application supports: (s)mall / (m)edium / (l)arge
