Move mouse with gyroscope, not tested yet.

--- a/project/jni/application/xserver/AndroidAppSettings.cfg
+++ b/project/jni/application/xserver/AndroidAppSettings.cfg
@@ -133,6 +133,9 @@ AppUsesAccelerometer=n
 # Application uses gyroscope (y) or (n), the gyroscope will be used as joystick 1 axes 2-4
 AppUsesGyroscope=n
 
+# Use gyroscope to move mouse cursor (y) or (n), it eats battery, and can be disabled in settings, do not use with AppUsesGyroscope setting
+MoveMouseWithGyroscope=y
+
 # Application uses multitouch (y) or (n), multitouch events are passed as SDL_JOYBALLMOTION events for the joystick 0
 AppUsesMultitouch=y
 
