--- a/project/jni/application/xserver-gimp/AndroidAppSettings.cfg
+++ b/project/jni/application/xserver-gimp/AndroidAppSettings.cfg
@@ -7,10 +7,10 @@ AppName="GIMP Inkscape"
 AppFullName=org.gimp.inkscape
 
 # Application version code (integer)
-AppVersionCode=28214
+AppVersionCode=28215
 
 # Application user-visible version name (string)
-AppVersionName="2.8.2.14"
+AppVersionName="2.8.2.15"
 
 # Specify path to download application data in zip archive in the form 'Description|URL|MirrorURL^Description2|URL2|MirrorURL2^...'
 # If you'll start Description with '!' symbol it will be enabled by default, other downloads should be selected by user from startup config menu
@@ -128,6 +128,9 @@ AppUsesAccelerometer=n
 
 # Application uses gyroscope (y) or (n), the gyroscope will be used as joystick 1 axes 2-4
 AppUsesGyroscope=n
+
+# Use gyroscope to move mouse cursor (y) or (n), it eats battery, and can be disabled in settings, do not use with AppUsesGyroscope setting
+MoveMouseWithGyroscope=y
 
 # Application uses multitouch (y) or (n), multitouch events are passed as SDL_JOYBALLMOTION events for the joystick 0
 AppUsesMultitouch=y
